@@ -1,3 +1,12 @@
+== In Git
+
+Step Argument Transforms
+
+=== New Features
+* Step Argument Transforms: These let you use the Transform method to register regular expressions
+  to catch and transform/coerce arguments before they are yielded to step definitions:
+  http://wiki.github.com/aslakhellesoy/cucumber/step-argument-transforms
+
 == 0.3.100 2009-09-09
 
 The JavaZone release!
